<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Old.activities.HelpActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="How to Use ENotes"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="70dp" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4sp"
                android:padding="15dp"
                android:text="@string/help_overview"
                android:textColor="@color/lightgrey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PagesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="Pages"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/pagesDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:lineSpacingExtra="4sp"
                android:padding="15dp"
                android:text="@string/help_page_description"
                android:textColor="@color/lightgrey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/NoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="Notes"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/notesDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4sp"
                android:padding="15dp"
                android:text="@string/help_note_description"
                android:textColor="@color/lightgrey"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/doneButton"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>