<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:theme="@style/dialogStyle"
    android:visibility="visible">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dFontView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default Font"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="132dp"
                tools:layout_editor_absoluteY="76dp" />

            <RadioGroup
                android:id="@+id/dFontGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/arialRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/arial" />

                <RadioButton
                    android:id="@+id/palatinoRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/palatino" />

                <RadioButton
                    android:id="@+id/courierRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/courier" />
            </RadioGroup>

            <TextView
                android:id="@+id/dFontSizeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default Font Size"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <RadioGroup
                android:id="@+id/dFontSizeGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/tenRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="10" />

                <RadioButton
                    android:id="@+id/twelveRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="12" />

                <RadioButton
                    android:id="@+id/fourteenRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="14" />

                <RadioButton
                    android:id="@+id/eighteenRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="18" />

                <RadioButton
                    android:id="@+id/twentyFourRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="24" />

                <RadioButton
                    android:id="@+id/thirtyTwoRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="32" />
            </RadioGroup>

            <TextView
                android:id="@+id/dColorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Default Color"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <RadioGroup
                android:id="@+id/dColorGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/yellowRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Yellow" />

                <RadioButton
                    android:id="@+id/orangeRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Orange" />

                <RadioButton
                    android:id="@+id/redRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Red" />

                <RadioButton
                    android:id="@+id/greenRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Green" />

                <RadioButton
                    android:id="@+id/blueRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Blue" />

                <RadioButton
                    android:id="@+id/purpleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Purple" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="Apply Changes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="Cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>